2024-02-10  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* cidtype2.c: Fix an issue on glyph conversion of
	characters over BMP.
	Add conversion between "FULLWIDTH YEN SIGN" and "YEN SIGN".
	https://github.com/texjporg/tex-jp-build/issues/165
	* configure.ac: version 20240210.

2024-02-05  Karl Berry  <karl@freefriends.org>

	* configure.ac,
	* xbb.c (show_version),
	* dvipdfmx.c (show_version): copyright 2024, version 20240205.

2023-11-24  Akira Kakuto  <kakuto@jcom.zaq.ne.jp>
	* dpxutil.c: Calculate time zone offset in the same way as
	in pdftex.
	* configure.ac: version 20231124.

2023-11-18  Yukimasa Morimi  <h20y6m@yahoo.co.jp>

	* cidtype2.c, unicode.c: Support for new Adobe-Japan1-UCS2 CMap.
	Ignore variation selectors, when mapping from CID to Unicode.
	Converts CJK Unified Ideographs with variant selectors to
	CJK Compatibility Ideographs, if possible.
	https://github.com/texjporg/tex-jp-build/issues/155
	* configure.ac: version 20231118.

2023-08-11  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* dpxfile.c: Avoid compiler warning on MinGW.
	* xdvipdfm-{ann,bad,bb,bkm,psz,ptx,res,rev,ttc}.test,
	xdvipdfmx.test, dvipdfmx-upjf.test:
	Make easier to test on Windows.

2023-07-08  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* cidtype0.c, pdffont.c:
	Replace multibyte characters <’> U+2019 by ASCII characters.

2023-04-29  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* {vf,tfm}.c:
	Fallback multibyte characters in virtual fonts to
	OFM fonts for (u)pTeX.
	https://github.com/texjporg/tex-jp-build/issues/99
	* configure.ac: version 20230429.
	* dvipdfmx-upjf.test, Makefile_upjf, tests/upjf-r00.{ofm,opl},
	tests/upjv-r00.{ofm,opl}, tests/upjf1-r.{tfm,pl},
	tests/upjf1_{full,omit}.{vf,zvp0}, Makefile.am:
	Add new tests for fallback virtual font to OFM.

	The rule for virtual fonts (VF) fallback is extended:
	If a VF has no entry of a codepoint and the first
	MAPFONT designates an OFM for (u)pTeX, then we designate the
	glyph (usually with a fullwidth metric) of the same codepoint