@@ -61,6 +61,8 @@ extern tt_cmap *tt_cmap_read    (sfnt *sfont, USHORT platform, USHORT encoding);
 extern USHORT   tt_cmap_lookup  (tt_cmap *cmap, ULONG cc);
 extern void     tt_cmap_release (tt_cmap *cmap);
 
+extern USHORT tt_cmap_uvs_lookup(tt_cmap* cmap_uvs, tt_cmap* cmap_default, ULONG unicode, ULONG uvs);
+
 #include "pdfobj.h"
 
 /* Indirect reference */
