@@ -1,3 +1,10 @@
+2024-02-10  Yukimasa Morimi  <h20y6m@yahoo.co.jp>
+
+	* cidtype2.c, sfnt.h, tt_cmap.{c,h}:
+	Look up the TrueType cmap format 14 subtable when mapping CID to
+	Unicode Variation Sequence in new Adobe-Japan1-UCS2 CMap.
+	https://github.com/texjporg/tex-jp-build/issues/155
+
 2024-02-10  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>
 
 	* cidtype2.c: Fix an issue on glyph conversion of
